--- a/app/globals.css
+++ b/app/globals.css
@@ -197,3 +197,8 @@ body {
     letter-spacing: var(--tracking-normal);
   }
 }
+
+::view-transition-old(root), ::view-transition-new(root) {
+    animation: none;
+    mix-blend-mode: normal;
+}
